--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
             Our Casino
     </div>
     <div id="casino_table" class="flex flex-col justify-between mx-16 bg-green-700 border-8 rounded-full h-96 border-amber-800">
-        <div id="dealers_cards" class="flex w-1/2 h-32 border-2 border-black place-self-center"> Dealers Cards
-                <div>Card 1</div>
-                <div>Card 2</div>
+        <div id="dealers_cards" class="flex w-1/2 h-32 border-2 border-black place-self-center"> 
+                
 
         </div>
         <div class="w-1/2 h-16 border-2 border-black place-self-center text-amber-300"> Dealer must draw on 16 and Stand on 17</div>
